force-app/main/default/objects/Merchandise__c/Merchandise__c.object-meta.xml
<CustomObject>
    <label>Product</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Merchandise Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>