force-app/main/default/objects/Merchandise__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Womens</fullName>
            </value>
            <value>
                <fullName>Mens</fullName>
            </value>
            <value>
                <fullName>Kids</fullName>
            </value>
            <value>
                <fullName>Gear</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>